<resources>
    <string name="app_name" >Agenda de contatos</string>
    <string name="menuitem_edit">Editar</string>
    <string name="menuitem_delete">Deletar</string>
    <string name="hint_name_required">Nome (Obrigatório)</string>
    <string name="hint_email">E-mail</string>
    <string name="hint_phone">Telefone</string>
    <string name="label_name">Nome:</string>
    <string name="label_email">E-mail:</string>
    <string name="label_phone">Telefone:</string>

</resources>