<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#536DFE"
    android:backgroundTint="#FFAB40"
    tools:context=".ui.main.DetailFragment">

    <androidx.gridlayout.widget.GridLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#69F0AE"
        app:columnCount="2"
        app:useDefaultMargins="true">

        <TextView
            android:id="@+id/nameLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="#EEFF41"
            android:text="@string/label_name"
            app:layout_gravity="top|end" />

        <TextView
            android:id="@+id/phoneLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_phone"
            app:layout_column="0"
            app:layout_gravity="center_horizontal|end"
            app:layout_row="1" />

        <TextView
            android:id="@+id/emailLabelTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/label_email"
            app:layout_column="0"
            app:layout_gravity="clip_horizontal|end"
            app:layout_row="2" />

        <TextView
            android:id="@+id/nameTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:backgroundTint="#64FFDA"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_column="1"
            app:layout_gravity="fill_horizontal"
            app:layout_row="0" />

        <TextView
            android:id="@+id/phoneTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:backgroundTint="#64FFDA"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_gravity="fill_horizontal" />

        <TextView
            android:id="@+id/emailTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/textview_border"
            android:backgroundTint="#64FFDA"
            android:text="TextView"
            android:textSize="16sp"
            app:layout_gravity="fill_horizontal" />

    </androidx.gridlayout.widget.GridLayout>
</FrameLayout>